--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "orbex-a"
+name = "orbexa"
 version = "1.0.0"
 description = "Orbital Rendezvous and Capture Experiment with Adaptive Tube MPC"
 authors = [
@@ -18,6 +18,7 @@ dependencies = [
   "numpy",
   "scipy",
   "gekko",
+  "mayavi",
   "matplotlib",
 ]
 
